# pdfhstack

./: pdfhstack.py  pyproject.toml  readme.md  setup.cfg
.github/workflows/: lint.yml  publish.yml
