[metadata]
name = pdfhstack
version = 0.1.0
description = Merge pages of pdf documents horizontally
author = Vladimir Abdrakhmanov
author_email = vlabdrake@protonmail.com
long_description = file: readme.md

[options]
python_requires = >=3.7, <4
install_requires =
    pypdf

[options.extras_require]
dev =
    black
    isort
    pylint

[options.entry_points]
console_scripts =
    pdfhstack = pdfhstack:main
